# app/Http/Controllers/Controller.php
@@ -727,7 +727,7 @@ use Illuminate\Routing\Controller as BaseController;
  *              required={
  *                        "BRANCH_TYPE", "BRANCH_ID", "TAX_ID", "OCCUPATION_ID", "UNIVERSITY_ID", "FACULTY_ID", "PRODUCT_SERIES", "DOWN_SUM_AMT", "INSTALL_NUM",
  *                        "PREFIX", "FIRST_NAME", "LAST_NAME", "BIRTHDAY", "SEX", "MARITAL_STATUS", "PHONE", "EMAIL", 
- *                        "OCCUPATION_ID", "MAIN_INCOME", "UNIVERSITY_PROVINCE", "LEVEL_TYPE", "U_LEVEL", "LOAN_KYS", "REF_TAX_ID", 
+ *                        "OCCUPATION_ID", "MAIN_INCOME", "LEVEL_TYPE", "U_LEVEL", "LOAN_KYS", "REF_TAX_ID", 
  *                        "REF_TITLE", "REF_FIRSTNAME", "REF_LASTNAME", "RELATION_REFERENCE", "REF_OCCUPATION", "REF_BIRTHDAY", "REF_PHONE", "IDCARD_FILE", "STUDENTCARD_FILE", 
  *                        "FACE_FILE", "STUDENT_ID", 
  *                        "A1_NO", "A1_PROVINCE", "A1_DISTRICT", "A1_SUBDISTRICT", "A1_POSTALCODE", "A1_OWNER_TYPE", "A2_NO", "A2_PROVINCE", "A2_DISTRICT", "A2_SUBDISTRICT", "A2_POSTALCODE", "A2_OWNER_TYPE", 
@@ -751,12 +751,11 @@ use Illuminate\Routing\Controller as BaseController;
  *              @OA\Property(property="SEX", type="string", format="string", example="1"),
  *              @OA\Property(property="MARITAL_STATUS", type="string", format="string", example="1"),
  *              @OA\Property(property="PHONE", type="string", format="string", example="0812345678"),
+ *              @OA\Property(property="PHONE_SECOND", type="string", format="string", example="0876543219"),
  *              @OA\Property(property="EMAIL", type="string", format="email", example="test@hotmail.com"),
  *              @OA\Property(property="FACEBOOK", type="string", format="string"),
  *              @OA\Property(property="LINEID", type="string", format="string"),
  *              @OA\Property(property="MAIN_INCOME", type="int", format="int", example="5000"),
- *              @OA\Property(property="UNIVERSITY_PROVINCE", type="int", format="int", example="10"),
- *              @OA\Property(property="UNIVERSITY_DISTRICT", type="int", format="int", example="1007"),
  *              @OA\Property(property="UNIVERSITY_ID", type="int", format="int", example="2"),
  *              @OA\Property(property="FACULTY_ID", type="int", format="int", example="47"),
  *              @OA\Property(property="FACULTY_OTHER", type="string", format="string"),
@@ -772,6 +771,7 @@ use Illuminate\Routing\Controller as BaseController;
  *              @OA\Property(property="REF_OCCUPATION", type="int", format="int", example="49"),
  *              @OA\Property(property="REF_BIRTHDAY", type="string", format="date", example="2544-10-18"),
  *              @OA\Property(property="REF_PHONE", type="string", format="string", example="0876543211"),
+ *              @OA\Property(property="REF_PHONE_SECOND", type="string", format="string", example="0800521521"),
  *              @OA\Property(property="IDCARD_FILE", type="file", format="binary" ),
  *              @OA\Property(property="STUDENTCARD_FILE", type="file", format="binary" ),
  *              @OA\Property(property="FACE_FILE", type="file", format="binary" ),
