# storage/api-docs/api-docs.json
@@ -1782,7 +1782,6 @@
                                     "EMAIL",
                                     "OCCUPATION_ID",
                                     "MAIN_INCOME",
-                                    "UNIVERSITY_PROVINCE",
                                     "LEVEL_TYPE",
                                     "U_LEVEL",
                                     "LOAN_KYS",
@@ -1903,6 +1902,11 @@
                                         "format": "string",
                                         "example": "0812345678"
                                     },
+                                    "PHONE_SECOND": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "0876543219"
+                                    },
                                     "EMAIL": {
                                         "type": "string",
                                         "format": "email",
@@ -1920,16 +1924,6 @@
                                         "type": "integer",
                                         "format": "int",
                                         "example": "5000"
-                                    },
-                                    "UNIVERSITY_PROVINCE": {
-                                        "type": "integer",
-                                        "format": "int",
-                                        "example": "10"
-                                    },
-                                    "UNIVERSITY_DISTRICT": {
-                                        "type": "integer",
-                                        "format": "int",
-                                        "example": "1007"
                                     },
                                     "UNIVERSITY_ID": {
                                         "type": "integer",
@@ -2003,6 +1997,11 @@
                                         "type": "string",
                                         "format": "string",
                                         "example": "0876543211"
+                                    },
+                                    "REF_PHONE_SECOND": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "0800521521"
                                     },
                                     "IDCARD_FILE": {
                                         "type": "file",
